--- a/angular-app/TAWRESTaurant/src/app/app.component.html
+++ b/angular-app/TAWRESTaurant/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-toolbar></app-toolbar>
-<router-outlet></router-outlet>
+<app-navbar></app-navbar>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
