--- a/angular-app/TAWRESTaurant/src/app/components/home/home.component.html
+++ b/angular-app/TAWRESTaurant/src/app/components/home/home.component.html
@@ -1,3 +1,10 @@
-<p>
-  home works!
-</p>
+<div class="jumbotron">
+  <h1 class="display-4" style="word-break: break-all">TAWRESTaurant</h1>
+  <p class="lead">
+    MEAN app for the order management of an hypothetical restaurant
+  </p>
+  <hr class="my-4" />
+  <p>
+    Seleziona un'operazione dal menu per cominciare.
+  </p>
+</div>
