--- a/angular-app/TAWRESTaurant/src/app/components/login/login.component.html
+++ b/angular-app/TAWRESTaurant/src/app/components/login/login.component.html
@@ -1,41 +1,41 @@
-<form (ngSubmit)="onSubmit()" #loginForm="ngForm">
-  <div class="card">
-    <div class="card-header">
-      <h3>Accedi</h3>
+<div class="card mx-auto" style="max-width: 400px">
+  <form class="px-4 py-4" #form="ngForm" (submit)="onSubmit(form)">
+    <h3 class="card-title">Accedi</h3>
+
+    <ngb-alert *ngIf="alert" [type]="alert.type" [dismissible]="false">
+      {{ alert.message }}
+    </ngb-alert>
+
+    <div class="form-group">
+      <label>Nome utente</label>
+      <input
+        type="text"
+        [(ngModel)]="form.username"
+        name="username"
+        class="form-control"
+        [disabled]="loading"
+        autofocus
+        required
+      />
+    </div>
+    <div class="form-group">
+      <label>Password</label>
+      <input
+        type="password"
+        [(ngModel)]="form.password"
+        name="password"
+        class="form-control"
+        [disabled]="loading"
+        required
+      />
     </div>
 
-    <div class="card-body">
-      <ngb-alert *ngIf="alert" [type]="alert.type" [dismissible]="false">
-        {{ alert.message }}
-      </ngb-alert>
-
-      <div class="form-group">
-        <input
-          type="text"
-          class="form-control"
-          placeholder="Nome utente"
-          required
-          [disabled]="loading"
-          [(ngModel)]="username"
-          name="_username"
-        />
-      </div>
-      <div class="form-group">
-        <input
-          type="password"
-          class="form-control"
-          placeholder="Password"
-          required
-          [disabled]="loading"
-          [(ngModel)]="password"
-          name="_password"
-        />
-      </div>
-    </div>
-    <div class="card-footer">
-      <button type="submit" class="btn btn-primary" [disabled]="loading">
-        Accedi
-      </button>
-    </div>
-  </div>
-</form>
+    <button
+      type="submit"
+      class="btn btn-primary"
+      [disabled]="!form.form.valid || loading"
+    >
+      Accedi
+    </button>
+  </form>
+</div>
