--- a/angular-app/TAWRESTaurant/src/app/components/home/home.component.html
+++ b/angular-app/TAWRESTaurant/src/app/components/home/home.component.html
@@ -5,6 +5,6 @@
   </p>
   <hr class="my-4" />
   <p>
-    Seleziona un'operazione dal menu per cominciare.
+    Seleziona un'opzione dal menu per cominciare.
   </p>
 </div>
