--- a/angular-app/TAWRESTaurant/src/app/components/navs-cashier/navs-cashier.component.html
+++ b/angular-app/TAWRESTaurant/src/app/components/navs-cashier/navs-cashier.component.html
@@ -1,3 +1,8 @@
-<li class="nav-item">
-  <a [routerLink]="['/users']" class="nav-link">Utenti</a>
-</li>
+<ul class="navbar-nav">
+  <li class="nav-item">
+    <a [routerLink]="['/users']" class="nav-link">Utenti</a>
+  </li>
+  <li class="nav-item">
+    <a [routerLink]="['/tables']" class="nav-link">Tavoli</a>
+  </li>
+</ul>
