--- a/angular-app/TAWRESTaurant/src/app/components/tables-list/tables-list.component.html
+++ b/angular-app/TAWRESTaurant/src/app/components/tables-list/tables-list.component.html
@@ -1,7 +1,8 @@
 <ul>
-  <li *ngFor="let table; in: tables">
+  <li *ngFor="let table of tables">
     number: {{ table.number }}, status: {{ table.status }}, foodOrdersStatus:
     {{ table.foodOrdersStatus }}, beverageOrdersStatus:
     {{ table.beverageOrdersStatus }}
+    <button (click)="occupyTable(table)">Occupa</button>
   </li>
 </ul>
